<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/username"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="160dp"
        android:hint="@string/username"
        android:paddingLeft="2dp"
        android:background="#ffffff"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:paddingLeft="2dp"
        android:background="#ffffff"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:background="#ffffff"/>
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:background="#ffffff"/>
    <Button
        android:id="@+id/register_button"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:text="@string/complete_registration"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#0f3a00"
            android:text="@string/already_registered"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#04ea00 "
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>